vprosvc.yaml
apiVersion: v1
kind: Service
metadata:
   name: my-app
spec:
   ports:
   - port: 8080
     protocol: TCP
     targetPort: 8080
   selector:
     run: my-app
   type: ClusterIP
