vproingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: vpro-ingress
   annotations:
      nginx.ingress.kubernetes.io/use-regex: "true"
spec:
   ingressClassName: nginx
   rules:
   - host: vprofile.mydevopsample.com
     http:
        paths:
        - path: /
          pathType: Prefix
          backend:
             service:
                name: my-app
                port:
                   number: 8080
